--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/unstorage-adapter": "^2.4.2",
+    "@vercel/kv": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.12",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
