refactor: update code

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,7 @@
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
 AUTH_SECRET=
-MONGODB_URI=
+KV_URL=
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
+KV_REST_API_READ_ONLY_TOKEN=
