--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "my-github-following",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@auth/unstorage-adapter": "^2.4.2",
@@ -20,10 +21,11 @@
     "unstorage": "^1.10.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.27.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
